--- a/vdoing/styles/palette.styl
+++ b/vdoing/styles/palette.styl
@@ -25,7 +25,7 @@
 
 // 颜色
 
-$bannerTextColor = #fff // 首页banner区(博客标题)文本颜色
+$bannerTextColor = transparent // 首页banner区(博客标题)文本颜色
 $accentColor = #11A8CD
 $activeColor = #ff5722
 $arrowBgColor = #ccc
@@ -84,3 +84,5 @@ $lineNumbersWrapperWidth = 2.5rem
   --codeBg: #282c34
   --codeColor: #fff
   codeThemeDark()
+
+
